table white space wrapping fix

--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -8,6 +8,7 @@ table.price-list-table {
   .price-list-table th:last-child {
     text-align: right;
     padding-left: 50px;
+    white-space: nowrap;
   }
 
   .price-list-table td,
